--- a/src/balloonintro.css
+++ b/src/balloonintro.css
@@ -55,16 +55,15 @@
   z-index: 0;
 }
 
-/* Balloon image full size background image */
+/* Balloon image full page background */
 .balloon-background-image {
   position: absolute;
   width: 1440px;
   height: 1024px;
   top: 0;
   left: 0;
-  background-repeat: no-repeat;
+  background: url('../assets/balloon.png') no-repeat center center;
   background-size: contain;
-  background-position: center;
   z-index: 0;
 }
 
@@ -100,7 +99,7 @@
   position: absolute;
   width: 244px;
   height: 41px;
-  left: calc(50% - 244px / 2 + 20px);
+  left: calc(50% - 244px / 2 + 80px);
   top: 195.03px;
   font-family: 'Montserrat';
   font-style: normal;
@@ -134,7 +133,7 @@
   width: 217.98px;
   height: 42px;
   left: calc(50% - 217.98px / 2);
-  top: 762.39px;
+  top: 880px;
   display: flex;
   justify-content: center;
   align-items: center;
