--- a/src/Activities.css
+++ b/src/Activities.css
@@ -151,7 +151,7 @@ html, body {
 
 /* Header columns */
 .activity-duration-header {
-  margin-left: 4px;
+  margin-right: 7px;
 }
 
 .activity-status-header {
@@ -160,7 +160,7 @@ html, body {
 
 /* Content rows */
 .activity-duration {
-  margin-left: 7px;
+  margin-right: 5px;
 }
 
 .activity-status {
