--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -8,30 +8,30 @@
   overflow: hidden;
 }
 
-/* == HEADER (already correct) == */
+/* Diagonal Header */
 .header-bar {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 1440px;
   height: 31.44px;
+  top: 0;
+  left: 0;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
   display: flex;
-  z-index: 10;
+  z-index: 3;
 }
 
-.header-bar .blue-bar {
+.blue-bar {
   width: 720px;
-  height: 100%;
+  height: 31.44px;
   background: #1B577E;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 
-.header-bar .orange-bar {
+.orange-bar {
   width: 744.67px;
-  height: 100%;
+  height: 31.44px;
   background: #EB5617;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
 }
+
 
 /* == WATERMARK == */
 .watermark-image {
@@ -75,7 +75,7 @@
   width: 207.18px;
   height: 250.92px;
   left: 412.02px;
-  top: 373.12px;
+  top: 573.12px;
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -86,7 +86,7 @@
   width: 270px;
   height: 40px;
   left: calc(50% - 270px / 2 + 188.49px);
-  top: 373.12px;
+  top: 573.12px;
   font-weight: 500;
   font-size: 24px;
   line-height: 40px;
@@ -139,7 +139,7 @@
   width: 535.95px;
   height: 42px;
   left: calc(50% - 535.95px / 2);
-  top: 658.4px;
+  top: 458.4px;
   display: flex;
   justify-content: space-between;
 }
